fix name possition on mobile

--- a/src/components/menu/MyMenu.css
+++ b/src/components/menu/MyMenu.css
@@ -1,24 +1,26 @@
-#menuContainer{
+#menuContainer {
     position: relative;
     height: 100%;
     width: 100%;
 }
 
-.menuOptions{
+.menuOptions {
     height: 100%;
     width: 100%;
 }
 
-#name{
-    float: left;
+#name {
     margin: 0;
     font-weight: normal;
     font-family: Arial, Helvetica, sans-serif;
     z-index: 2;
     position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 }
 
-.innerMenu{
+.innerMenu {
     position: relative;
     left: 20%;
     width: 60%;
@@ -27,11 +29,11 @@
     justify-content: space-between;
 }
 
-.innerContainer{
+.innerContainer {
     margin-left: 30%;
 }
 
-.menuOption{
+.menuOption {
     margin: 0;
     padding: 0;
     border: none;
@@ -45,28 +47,30 @@
 }
 
 
-.menuOption:hover, #igLink:hover {
+.menuOption:hover,
+#igLink:hover {
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-#menuBox{
+#menuBox {
     float: right;
     top: 1.2em;
     visibility: visible;
 }
 
-#igLink{
+#igLink {
     text-decoration: none;
     color: black;
     margin-left: 40px;
     min-width: 82px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
 }
 
-@media (max-width:900px), (max-height:500px) {
-    .menuOption{
+@media (max-width:900px),
+(max-height:500px) {
+    .menuOption {
         margin: 0;
         padding: 0;
         border: none;
@@ -75,26 +79,29 @@
         color: black;
         font-weight: 500;
         min-height: 20px;
-        font-size: 0.583rem; /* Ensure same size */
+        font-size: 0.583rem;
+        /* Ensure same size */
     }
 
-    #name{
-        font-size: 0.8rem; /* Ensure same size */
+    #name {
+        font-size: 0.8rem;
+        /* Ensure same size */
+        justify-content: center;
     }
 
-    #menuDownloads{
+    #menuDownloads {
         min-width: 42px;
     }
 
-    #menuArchive{
+    #menuArchive {
         min-width: 64px;
     }
 
-    #menuBio{
+    #menuBio {
         min-width: 13px;
     }
 
-    #igLink{
+    #igLink {
         min-width: 42px;
         margin-left: 0;
         display: flex;
@@ -102,16 +109,20 @@
         justify-content: center;
     }
 
-    .innerContainer{
+    .innerContainer {
         margin-left: 15%;
     }
 
-    .innerMenu{
-        left: 0; /* Align to the left */
-        width: 100%; /* Full width */
+    .innerMenu {
+        left: 0;
+        /* Align to the left */
+        width: 100%;
+        /* Full width */
         display: flex;
-        justify-content: flex-start; /* Align items vertically */
+        justify-content: flex-start;
+        /* Align items vertically */
         flex-direction: column;
-        height: auto; /* Adjust height */
+        height: auto;
+        /* Adjust height */
     }
 }
